Added workflow dispatch & updated Readme

--- a/.github/workflows/deploy-agentcore.yml
+++ b/.github/workflows/deploy-agentcore.yml
@@ -1,8 +1,7 @@
 name: Deploy Strand Agent to Bedrock AgentCore Runtime
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch:
 
 env:
   AWS_REGION: us-east-1
